--- a/css/common.css
+++ b/css/common.css
@@ -1,48 +1,49 @@
+/* @charset "utf-8"; */
 
 .c-container-price::after {
-  content: '원';
-  margin-left: 10px;
-  display: block;
+    content: "\c6d0"; /* 원 */
+    margin-left: 10px;
+    display: block;
 }
 
 input.c-input {
-  padding: 12px 16px;
-  border-radius: 8px;
-  border: none;
-  border: 1px solid #E0E0E0;
-  width: 100%;
+    padding: 12px 16px;
+    border-radius: 8px;
+    border: none;
+    border: 1px solid #e0e0e0;
+    width: 100%;
 }
 
 .c-button {
-  padding: 12px 16px;
-  border-radius: 8px;
-  border: none;
-  border: 1px solid #E0E0E0;
-  width: 100%;
-  cursor: pointer;
+    padding: 12px 16px;
+    border-radius: 8px;
+    border: none;
+    border: 1px solid #e0e0e0;
+    width: 100%;
+    cursor: pointer;
 }
 
 .c-large-button {
-  background-color: #F0F0F0;
-  border: none;
-  border: 1px solid #E0E0E0;
-  border-radius: 12px;
-  padding: 12px;
-  font-size: 16px;
-  width: 100%;
-  margin-top: 12px;
+    background-color: #f0f0f0;
+    border: none;
+    border: 1px solid #e0e0e0;
+    border-radius: 12px;
+    padding: 12px;
+    font-size: 16px;
+    width: 100%;
+    margin-top: 12px;
 }
 
 label.c-label {
-  font-size: 16px;
-  width: 80px;
-  min-width: 80px;
+    font-size: 16px;
+    width: 80px;
+    min-width: 80px;
 }
 
 .v-none {
-  display: none;
+    display: none;
 }
 
 .v-show {
-  display: block;
+    display: block;
 }
